# mcp

./: .gitignore  ecosystem.config.js  pyproject.toml  start.sh  stop.sh
.chainlit/: config.toml
apis/: index.py
apis/crm/: leads.py  token_crm.py
apis/instagram/: index.py
apis/intagram/: index.py
apis/meta/: index.py
apis/tiktok/: index.py
chat/back/: agent.py  index.py  mcp_client.py
chat/front/: index.html  middleware.ts  package.json  pnpm-lock.yaml  vite.config.js
chat/front/app/: layout.tsx  page.tsx
chat/front/app/(frontend)/login/: page.tsx
chat/front/app/actions/: chat.ts  login.ts
chat/front/app/components/: ChatHeader.tsx  ChatInput.tsx  MessageItem.tsx  MessageList.tsx
chat/front/app/components/logos/: utp.tsx
chat/front/app/hooks/: useChat.ts
chat/front/src/: App.css  App.jsx
chat/front/utils/: fn.js
external_data/google/: bigquery.py
external_data/google/drive/: index.py
external_data/utp/: convalidaciones.py
front/: adapter.py  agent.py  extra.py  index.py  old.py
front/bots/: utp_ads.py  utp_informativo.py
front/utils/: fn.py  mcp_actions.py
public/: connect_mcp.js
servers/: ads.py  intragram.py  social_networks.py  test.py  utp.py
