[project]
name = "mcp-utp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.8.3",
    "db-dtypes>=1.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp==2.12.3",
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-bigquery>=3.38.0",
    "google-genai>=1.46.0",
    "llama-index>=0.14.3",
    "llama-index-llms-ollama>=0.7.4",
    "llama-index-tools-mcp>=0.4.1",
    "lxml>=6.0.2",
    "mcp>=1.14.1",
    "ollama>=0.6.0",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
